# routes/auth.router.js
@@ -4,5 +4,6 @@ const auth = require('../controllers/auth.controller.js');
 
 
 router.post('/login', auth.login);
+router.delete('/logout', auth.logout)
 
 module.exports = router;
